meta-iot2000-bsp depends on meta-intel
Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/meta-iot2000-bsp/conf/layer.conf
+++ b/meta-iot2000-bsp/conf/layer.conf
@@ -13,3 +13,6 @@ IOT2000_MIT_LICENSE = "${LAYERDIR}/COPYING.MIT"
 IOT2000_GPLv2_LICENSE = "${LAYERDIR}/COPYING.GPLv2"
 
 PACKAGE_CLASSES = "package_ipk"
+
+# We depend on meta-intel
+LAYERDEPENDS_iot2000-bsp = "intel"
