--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -40,3 +40,7 @@ PACKAGE_EXTRA_ARCHS_append = " intel-quark quark i586 x86"
 
 EXTRA_IMAGEDEPENDS_append = " acpi-upgrades"
 INITRD_LIVE_prepend = "${DEPLOY_DIR_IMAGE}/acpi-upgrades-${MACHINE}.cpio "
+
+# glibc needs to be compiled with -Wa,-momit-lock-prefix for the iot2000 BSP
+# force a rebuild with the following TCMODE setting
+TCMODE = "external-sourcery-rebuild-libc"
