Get a binary locale package generated and used in the images
Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -42,5 +42,12 @@ EXTRA_IMAGEDEPENDS_append = " acpi-upgrades"
 INITRD_LIVE_prepend = "${DEPLOY_DIR_IMAGE}/acpi-upgrades-${MACHINE}.cpio "
 
 # glibc needs to be compiled with -Wa,-momit-lock-prefix for the iot2000 BSP
-# force a rebuild with the following TCMODE setting
+# force a rebuild with the following TCMODE setting and also get binary locales
+# compiled
 TCMODE = "external-sourcery-rebuild-libc"
+ENABLE_BINARY_LOCALE_GENERATION = "1"
+GLIBC_INTERNAL_USE_BINARY_LOCALE = "compile"
+
+# Unfortunately a single binary locale package gets generated, we will want that
+# one used in our images
+IMAGE_LINGUAS = "en-us.iso-8859-1"
