Add swupdate to the console-image
Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/meta-iot2000-bsp/conf/layer.conf
+++ b/meta-iot2000-bsp/conf/layer.conf
@@ -14,5 +14,5 @@ IOT2000_GPLv2_LICENSE = "${LAYERDIR}/COPYING.GPLv2"
 
 PACKAGE_CLASSES = "package_ipk"
 
-# We depend on meta-intel
-LAYERDEPENDS_iot2000-bsp = "intel"
+# We depend on meta-intel and swupdate
+LAYERDEPENDS_iot2000-bsp = "intel swupdate"
