Configure swupdate to receive compressed update images
Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -51,3 +51,6 @@ GLIBC_INTERNAL_USE_BINARY_LOCALE = "compile"
 # Unfortunately a single binary locale package gets generated, we will want that
 # one used in our images
 IMAGE_LINGUAS = "en-us.iso-8859-1"
+
+# Generate compressed EXT4 images for swupdate
+IMAGE_FSTYPES += " ext4.gz"
