--- a/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.cfg
+++ b/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.cfg
@@ -23,7 +23,7 @@ suricatta :
 	tenant		= "default";
 	id		= "iot2000";
 	confirm 	= 0;
-	url 		= "http://papero:8080";
+	url 		= "http://hawkbit:8080";
 	polldelay	= 360;
 	nocheckcert	= true;
 	retry		= 4;
@@ -32,11 +32,6 @@ suricatta :
 	userid		= 0;
 	groupid		= 0;
 	max_artifacts	= 1;
-/*
-	cafile		= "/etc/ssl/cafile";
-	sslkey		= "/etc/ssl/sslkey";
-	sslcert		= "/etc/ssl/sslcert";
-*/
 };
 
 webserver :
