--- a/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.service
+++ b/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.service
@@ -1,10 +1,11 @@
 [Unit]
 Description=swupdate
+After=network.target
 
 [Service]
 ExecStartPre=-/usr/bin/swupdate-env
 EnvironmentFile=-/tmp/swupdate.env
-ExecStart=/usr/bin/swupdate -l 5 -u '-t default -u http://hawkbit:8080 -i25'
+ExecStart=/usr/bin/swupdate -u "-c 2 -t default -u http://hawkbit:8080 -i ${MACHINE_ID}" -p /sbin/reboot
 
 [Install]
 WantedBy=multi-user.target
