iot2000: Add swupdate support
Add the swupdate MACHINE_FEATURE and add ext4.swu as a supported image type.

Signed-off-by: Wade Farnsworth <wade_farnsworth@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -54,3 +54,6 @@ IMAGE_LINGUAS = "en-us.iso-8859-1"
 
 # Generate compressed EXT4 images for swupdate
 IMAGE_FSTYPES += " ext4.gz"
+
+MACHINE_FEATURES += "swupdate"
+IMAGE_FSTYPES += "${@bb.utils.contains('COMBINED_FEATURES', 'swupdate', 'ext4.swu', '', d)}"
