Use efibootguard as the bootloader
Signed-off-by: Cedric Hombourger <Cedric_Hombourger@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -27,7 +27,10 @@ MACHINE_EXTRA_RRECOMMENDS += "kernel-modules linux-firmware"
 SERIAL_CONSOLE = "115200 ttyS1"
 APPEND += "rootwait console=ttyS1,115200 console=tty0"
 
-EFI_PROVIDER ?= "systemd-boot"
+# Use efibootguard as the bootloader
+EFI_PROVIDER = "efibootguard"
+NOISO = "1"
+do_image_wic[depends] += "gptfdisk-native:do_populate_sysroot"
 
 # Ensure that the Lock prefix is omitted for the kernel"
 KERNEL_EXTRA_ARGS = "EXTRA_CFLAGS=-Wa,-momit-lock-prefix=yes"
