--- a/meta-iot2000-bsp/conf/layer.conf
+++ b/meta-iot2000-bsp/conf/layer.conf
@@ -14,5 +14,5 @@ IOT2000_GPLv2_LICENSE = "${LAYERDIR}/COPYING.GPLv2"
 
 PACKAGE_CLASSES = "package_ipk"
 
-# We depend on meta-intel and swupdate
-LAYERDEPENDS_iot2000-bsp = "intel swupdate"
+# We depend on meta-intel, efibootguard and swupdate
+LAYERDEPENDS_iot2000-bsp = "intel efibootguard swupdate"
