--- a/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.service
+++ b/meta-iot2000-bsp/recipes-support/swupdate/swupdate/swupdate.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 ExecStartPre=-/usr/bin/swupdate-env
 EnvironmentFile=-/tmp/swupdate.env
-ExecStart=/usr/bin/swupdate -u "-c 2 -t default -u http://hawkbit:8090 -i ${MACHINE_ID}" -p /sbin/reboot
+ExecStart=/usr/bin/swupdate -u "-c 2 -t default -u http://hawkbit:8090 -i ${MACHINE_ID}" -p /sbin/reboot -e stable,platform1
 
 [Install]
 WantedBy=multi-user.target
