Initial commit of sw-descritpion file for compound image and added bzImage in MACHINE_BOOT_FILES.
* Added initial commit of sw-description file for compound image. Further bzImage
  needs to be added in MACHINE_BOOT_FILES so that it can be picked in
  IMAGE_BOOT_FILES = "${MACHINE_BOOT_FILES} when set in local.conf while building
  with meta-mentor-swupdate.

Signed-off-by: Noor Ahsan <noor_ahsan@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -49,3 +49,5 @@ IMAGE_FSTYPES += " ext4.gz"
 
 MACHINE_FEATURES += "swupdate"
 IMAGE_FSTYPES += "${@bb.utils.contains('COMBINED_FEATURES', 'swupdate', 'ext4.swu', '', d)}"
+
+MACHINE_BOOT_FILES = "bzImage"
