iot2000.conf: set preferred provider for gdbserver to gdb
MEL is building it's own glibc and not using the one from Sourcery
toolchain. gdbserver coming with toolchain doesn't work with MEL
generated glibc. So instead of using gdbserver from Sourcery toolchain,
build gdbserver from sources by setting preferred provider to gdb
(from poky).

Signed-off-by: Fahad Arslan <Fahad_Arslan@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -55,3 +55,5 @@ MACHINE_BOOT_FILES = "bzImage"
 # Metadata used by CodeBench for the ADE
 INHERIT += "${@'cb-mbs-options' if 'mentor-private' in '${BBFILE_COLLECTIONS}'.split() else ''}"
 ADE_CB_MBS[general.cpu] = "general.cpu.quark"
+
+PREFERRED_PROVIDER_gdbserver = "gdb"
