--- a/meta-iot2000-bsp/conf/layer.conf
+++ b/meta-iot2000-bsp/conf/layer.conf
@@ -5,6 +5,11 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
+# Let us add layer-specific bbappends which are only applied when that
+# layer is included in our configuration
+BBFILES += "${@' '.join('${LAYERDIR}/%s/recipes*/*/*.%s' % (layer, ext) \
+               for layer in BBFILE_COLLECTIONS.split() for ext in ['bb', 'bbappend'])}"
+
 BBFILE_COLLECTIONS += "iot2000-bsp"
 BBFILE_PATTERN_iot2000-bsp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_iot2000-bsp = "11"
