iot2000.conf: add 96boards-tools to resize rootfs to disk media capacity
Signed-off-by: Fahad Arslan <Fahad_Arslan@mentor.com>

--- a/meta-iot2000-bsp/conf/machine/iot2000.conf
+++ b/meta-iot2000-bsp/conf/machine/iot2000.conf
@@ -24,6 +24,11 @@ MACHINE_FEATURES = "efi usb"
 
 MACHINE_EXTRA_RRECOMMENDS += "kernel-modules linux-firmware"
 
+# Comment or delete this line to disable inclusion of 96boards-tools. This
+# package resizes the rootfs to the capacity of the disk media on first boot, but
+# increases the rootfs size by 4 megs due to its dependencies.
+MACHINE_EXTRA_RRECOMMENDS += " ${@' 96boards-tools' if 'mel-support' in '${BBFILE_COLLECTIONS}'.split() else ''}"
+
 SERIAL_CONSOLE = "115200 ttyS1"
 APPEND += "rootwait console=ttyS1,115200 console=tty0"
 
